test_suite/tests/ui/duplicate-attribute/with-and-serialize-with.stderr
error: duplicate serde attribute `serialize_with`
 --> $DIR/with-and-serialize-with.rs:6:25
  |
6 |     #[serde(with = "w", serialize_with = "s")]
  |                         ^^^^^^^^^^^^^^

error: aborting due to previous error

