test_suite/tests/ui/duplicate-attribute/with-and-serialize-with.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
struct S {
    #[serde(with = "w", serialize_with = "s")]
    x: (),
}

fn main() {}
